# edv

./: .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  BRACKET_PRINTING_PLAN.md  CHEATSHEET.md  COMMIT_ANALYSIS.md  DEPENDENCIES.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_SUMMARY.md  DRAG_DROP_PLAN.md  Dockerfile  Dokumentation.md  Doxyfile  FIXES_STATUS.md  GENERATION_METHOD_PLAN.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_REVIEW_2026-03-04_UPDATED.md  MEMORY.md  MIGRATION_STRATEGY.md  NAVIGATION_ARCHITECTURE.md  PROCESS_FLOW_TOURNAMENT_IMPORT.md  QUICK_REFERENCE.md  README.md  REUSE.toml  SCREEN_FLOW_ACCURATE.md  SCREEN_FLOW_DIAGRAM.md  TODO_DB_INTEGRATION.md  UI_DB_ARCHITECTURE_ISSUE.md  __init__.py  __main__.py  action_plan.md  alembic.ini  backend_änderungen_log.md  bracket_viewer.py  build_portable.ps1  build_portable.sh  conftest.py  contestants_female.json  contestants_female2.json  contestants_male.json  (+20 more)
Beispieldateien/: 16_Doppel-KO-System.xls  32_mod.Doppel-KO-System.xls  8_Doppel-KO-System.xls  Pool_Listen.xls
ImportTest/: contestants_female.json  contestants_male.json  tolerance_settings.json
alembic/: env.py
alembic/versions/: 20260224_0001_initial_schema.py  20260224_0002_add_groups_name.py  20260303_0003_fight_metadata_and_placements.py  20260310_0004_add_table_id_to_fights.py  20260310_0005_participants_unique_constraint.py  20260503_0006_age_class_locks.py  20260522_0007_fights_int_columns.py
assets/urkunden/: README.md  UrkundenSerienbrief.bas  urkunden_vorlage.fodt
backend/: __init__.py
backend/data/: __init__.py  database.py  db_config.py  migrations.py  models.py
backend/services/: __init__.py  bracket_excel_generator.py  bracket_pdf_canvas_exporter.py  bracket_pdf_generator.py  bracket_pdf_generator_v2.py  bracket_pdf_generator_v3.py  bracket_pdf_generator_v4.py  bracket_reconstruction_service.py  bracket_service.py  contestants_csv.py  database_service.py  (+7 more)
config/: bracket_config.xlsx
db_init/: 1_schema.sql  2_data.sql
edv_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
frontend/: STYLES_GUIDE.md  __init__.py  data_transformation_pipeline.py  navigation_bar.py  screen_manager.py  state.py  styles.py
tests/: __init__.py  ko_form_decoder.py  test_bracket_algorithms.py  test_bracket_assignment_controller.py  test_data_loader_merge.py  test_excel_reseeding.py  test_export_age_lock.py  test_get_bracket_metadata.py  test_helpers.py  test_ko_form_order.py  test_logger_exc_info.py  test_manual_refresh_persist.py  test_pool_tiebreaker.py  test_pool_weight_spread.py  test_tolerance_apply.py  test_tournament_state.py  test_urkunden_export.py
utils/: __init__.py  bracket_config_loader.py  bracket_utils.py  cli.py  create_bracket_config_excel.py  helpers.py  paths.py  task_runner.py
(+48 files in other folders)
