# SPDX-FileCopyrightText: 2026 TOP Team Combat Control
# SPDX-License-Identifier: GPL-3.0-or-later

[build-system]
# setuptools >=82 nötig: ältere Versionen schreiben das editable-`.pth`
# unter einem Namen mit führendem `__`, das Python >=3.14 als "hidden file"
# überspringt — der editable-Module-Finder wird dann nie installiert und
# `edv-backend` bricht mit `ModuleNotFoundError`.
requires = ["setuptools>=82"]
build-backend = "setuptools.build_meta"

[project]
name = "edv-backend"
version = "0.1.0"
description = "Tournament management desktop app for Judo competitions"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "openpyxl",
    "psycopg2-binary",
    "sqlalchemy",
    "python-dotenv",
]

[project.optional-dependencies]
dev = ["pytest", "alembic"]

[project.scripts]
# Zeigt auf `utils/cli.py`, NICHT auf `main:main`. Grund: `main.py` ist
# eine Top-Level-Datei (kein Paket); der editable-Module-Finder
# registriert sie als Verzeichnis-Mapping (`{'main': '.../main'}`), nicht
# als Datei-Modul — Import via `from main import main` schlägt dann fehl.
# `utils/cli.py` lebt im installierten Paket `utils`, ist immer findbar
# und enthält den vollständigen Boot-Code; `main.py` ist nur noch ein
# dünner Wrapper, damit `python main.py` weiter funktioniert.
edv-backend = "utils.cli:main"

[tool.setuptools.packages.find]
# All importable packages live directly under the project root (flat layout):
# utils/, backend/, frontend/, config/
where = ["."]
exclude = ["tests*", "logs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# conftest.py at the root handles sys.path — no extra pythonpath config needed

[tool.setuptools.package-data]
"*" = ["*.xlsx", "*.toml", "*.env.example"]
